# cps-deps

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  format.yaml
src/: cps.rs  generate_from_pkg_config.rs  lib.rs  lib_search.rs  main.rs  pkg_config.rs
