[package]
name = "cps-deps"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Common Package Specification (CPS) Rust Library"
repository = "https://github.com/tylerjw/cps-deps"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
pkg-config = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
