[package]
name = "cps-deps"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "Common Package Specification (CPS) Rust Library"
repository = "https://github.com/tylerjw/cps-deps"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.7.0"
walkdir = "2.5.0"
